--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<% @users.each do |user| %>
+  <p><%= user.name %></p>
+  <p><%= user.email %></p>
+  <p><%= user.profile_id %></p>
+<% end %>
